--- a/style.css
+++ b/style.css
@@ -1,53 +1,55 @@
-/* Basic Style */
-body {
-    background-color: #f8f8f8;
-    color: #333;
-    font-family: Lato, sans-serif;
-}
-.aaa {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
-}
-.aaa img {
-    width: 100%;
-}
-.aaa .more_inf {
-    font-family: fantasy, cursive;
-}
-
-@media (max-width: 768px) {
-  .aaa {
-    text-align: center;
-  }
-}
-.centered-main-page-element {
-    display: block;
-    width: 500px;
-    margin: 0 auto 0;
-}
-.task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1;
-}
-.task-row-wrapper {
-    display: flex;
-}
+/* Reset Default Styles */
 ul {
     margin: 0;
     padding: 0px;
 }
-li,
-h3 {
+li {
     list-style: none;
 }
 input,
 button{
     outline: none;
 }
-button {
+
+/* Basic Style */
+.body {
+    background-color: #f8f8f8;
+    color: #333;
+    font-family: Lato, sans-serif;
+}
+.hero {
+    width: 500px;
+    margin: 0 auto;
+    display: block;
+    text-align: right;
+}
+.hero__img{
+    width: 100%;
+}
+.hero__link{
+    font-family: fantasy, cursive;
+}
+
+@media (max-width: 768px) {
+  .hero {
+    text-align: center;
+  }
+}
+.todo {
+    display: block;
+    width: 500px;
+    margin: 0 auto 0;
+}
+.task__name,
+.task__input {
+    width: 56%;
+    display: inline-block;
+    flex-grow: 1;
+}
+.todo__task {
+    display: flex;
+}
+.task__btn {
     background: none;
     border: 0px;
     color: #888;
@@ -56,12 +58,11 @@ button {
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-button:hover {
+.task__btn:hover {
     color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.todo__section-title {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -70,7 +71,7 @@ label[for="new-task"] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
+.task__input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -82,21 +83,12 @@ input[type="text"] {
     font-family: Lato, sans-serif;
     color: #888;
 }
-input[type="text"]:focus {
+.task__input:focus {
     color: #333;
 }
 
-/* New Task */
-label[for="new-task"] {
-    display: block;
-    margin: 0 0 20px;
-}
-input#new-task {
-    width: 318px;
-}
-
 /* Task list */
-li {
+.task {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -105,47 +97,57 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+.task > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task__checkbox {
     margin: 0 10px;
 }
-li > label {
+.task__name {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+.task__input {
     width: 226px;
 }
-button.delete img {
+.remove-icon {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.remove-icon:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.todo__section_completed .task__name {
     text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task__input {
     display: none;
 }
 
-ul li.editMode input[type=text] {
+.task.edit-mode .task__input {
     display: inline-block;
     width: 224px;
 }
 
-ul li.editMode label {
+.task.edit-mode .task__name {
     display: none;
+}
+
+/* New Task */
+.todo__section-title_new {
+    display: block;
+    margin: 0 0 20px;
+}
+.task__input_new {
+    display: inline-block;
+    width: 318px;
 }
